@@ -1,3 +1,12 @@
+Wed May 13 00:16:35 1998  Havoc Pennington  <hp@pobox.com>
+
+	* gnome-dialog-util.h, gnome-dialog-util.c: Return the created
+ 	dialog. This makes the functions much more useful. I was thinking
+ 	they should be maximally opaque, but went a little overboard
+ 	I guess.
+	* testgnome.c: Well, that was short-lived. Someone else did it
+	already. Yay!
+
 1998-05-11  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gnome-icon-list.c (gnome_icon_list_unselect_all): New function.
